# sample_llm

./: Dockerfile  README.md  basic.py  chain.py  chat_router.py  main.py  pyproject.toml  requirement.txt
.github/workflows/: docker_build.yaml
