[project]
name = "sample"
version = "0.1.0"
description = ""
authors = [
    {name = "SivaSudhan3",email = "sivasudhan321@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.72,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-groq (>=0.3.6,<0.4.0)",
    "langgraph (>=0.5.4,<0.6.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "grandalf (>=0.8,<0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
